# ChaticoMapper

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TESTING.md  alembic.ini  env.example  pyproject.toml  pytest.ini  run_tests.sh  start.sh
app/: __init__.py  api.py  config.py  dependencies.py  main.py  models.py  repositories.py  schemas.py  services.py  use_cases.py
config/: nginx.conf  rabbitmq.conf
database/: alembic.ini
database/migrations/: env.py  script.py.mako
docker/: .dockerignore  Dockerfile  docker-compose.yml
scripts/: hash_password.py  init-db.sql
src/: __init__.py  main.py
src/api_v1/: __init__.py  api.py  auth.py  google_oauth.py  instagram_oauth.py  schemas.py  users.py  webhook.py  worker_apps.py
src/core/: config.py  container.py  dependencies.py  logging_config.py
tests/: conftest.py  test_auth_worker_app.py  test_process_webhook_cache.py  test_webhook_forwarding.py  test_worker_apps.py
tests/factories/: __init__.py
tests/integration/: test_app_endpoints.py  test_auth_worker_app.py  test_google_oauth_api.py  test_instagram_oauth_api.py  test_monitoring_endpoints.py  test_webhook_endpoints.py  test_webhook_forwarding.py  test_worker_app_endpoints.py  test_worker_apps.py
tests/unit/: test_auth_service.py  test_google_oauth_account_status.py  test_instagram_service.py  test_manage_worker_apps_use_case.py  test_oauth_token_service.py  test_process_webhook_cache.py  test_process_webhook_use_case.py  test_rabbitmq_service.py  test_redis_cache_service.py  test_repositories.py  test_routing_service.py  test_time_utils.py  (+4 more)
(+46 files in other folders)
